# store-front

./: .dockerignore  .gitignore  LICENSE  README.md  TODO.md  docker-compose.ci.yml  docker-compose.yml
.github/scripts/: README.md  cleanup-docker-images.sh  cleanup-pr-images.sh  generate-image-tag.sh
.github/workflows/: backend-checks.yml  build-container.yml  checks.yml  cleanup-images.yml  cleanup-pr-images.yml  frontend-checks.yml  master-merge.yml
app/backend/: .coveragerc  .dockerignore  Dockerfile  pyproject.toml  requirements.txt
app/backend/api/: urls.py  views.py
app/backend/app/: settings.py  urls.py
app/backend/authentication/: apps.py  serializers.py  urls.py  views.py
app/backend/authentication/tests/: test_user_login.py  test_user_refresh.py  test_user_registration.py
app/backend/core/: admin.py  helpers.py  models.py  permissions.py  serializers.py  settings.py  urls.py
app/backend/core/management/commands/: wait_for_db.py
app/backend/core/migrations/: 0001_initial.py  0002_alter_brand_name_alter_category_name.py  0002_rename_name_user_first_name_user_last_name.py  0003_alter_product_sku.py  0003_profile.py  0004_alter_brand_name_alter_category_name.py  0004_alter_profile_user.py  0005_brand_brand_name_not_empty_and_more.py  0005_remove_profile_address_remove_profile_date_of_birth_and_more.py  0006_product.py  0006_remove_product_sku_not_empty_alter_product_quantity_and_more.py  0007_brand_created_at_brand_updated_at_and_more.py  0007_rename_stock_product_in_stock.py  0008_brand_category.py
app/backend/core/tests/: test_admin.py  test_commands.py  test_models.py
app/backend/scripts/: common.sh  create_venv.sh  format.sh  lint-fix.sh  lint.sh
app/backend/users/: serializers.py  urls.py  views.py
app/backend/users/tests/: test_user_actions.py  test_user_login.py  test_user_profiles.py  test_user_refresh.py  test_user_registration.py  test_users.py  test_users_actions.py
app/frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
app/frontend/src/: App.css
app/frontend/src/components/: NavBar.tsx  ResponsiveAppBar.tsx  footer.tsx  header.tsx  layout.tsx
docs/: API_Schema.md  UV_WORKFLOW.md  init-setup.md  init_setup.md  uv-workflow.md
pulls/3/: description.md
scripts/: create_venv.sh
