[project]
name = "store-front-backend"
version = "0.1.0"
description = "Django REST Framework backend for Store Front"
requires-python = ">=3.13"
dependencies = [
    "Django>=5.1",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.5",
    "psycopg[binary]>=3.2",
    "django-redis>=5.4",
    "python-dotenv>=1.0",
    "drf-spectacular>=0.27",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-django==4.9.0",
    "pytest-sugar==1.0.0",
    "pytest-cov==6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--color=yes",
    "--strict-markers",
    "--tb=short",
    "--reuse-db",
]
