[project]
name = "store-front-backend"
version = "0.1.0"
description = "Django REST Framework backend for Store Front"
requires-python = ">=3.13"
dependencies = [
    "Django>=5.1",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.5",
    "psycopg[binary]>=3.2",
    "django-redis>=5.4",
    "python-dotenv>=1.0",
    "drf-spectacular>=0.27",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-django==4.9.0",
    "pytest-sugar==1.0.0",
    "pytest-cov==6.0.0",
    "ruff>=0.14.5",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"

exclude = [
    # Version control
    ".bzr",
    ".git",
    ".git-rewrite",
    ".hg",
    ".svn",
    # Python cache and compiled files
    "__pycache__",
    "*.pyc",
    "*.pyo",
    "*.pyd",
    ".Python",
    # Virtual environments
    ".venv",
    "venv",
    "ENV",
    "env",
    # Build and distribution
    ".eggs",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "*.egg-info",
    "*.egg",
    # Testing and coverage
    ".coverage",
    ".coverage.*",
    ".pytest_cache",
    ".hypothesis",
    "htmlcov",
    ".tox",
    ".nox",
    # IDE and editor files
    ".vscode",
    ".idea",
    "*.swp",
    "*.swo",
    "*~",
    # Type checking and linting
    ".mypy_cache",
    ".pytype",
    ".ruff_cache",
    ".pylint_cache",
    # Django-specific
    "*/migrations/*",
    "*/migrations/",
    # Other
    ".direnv",
    ".pants.d",
    "node_modules",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--color=yes",
    "--strict-markers",
    "--tb=short",
    "--reuse-db",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-branch",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/manage.py",
    "*/settings.py",
    "*/wsgi.py",
    "*/asgi.py",
    "*/urls.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@property",
    "@abstractproperty",
]
